--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,7 +7,7 @@
 }
 
 html, body{
-    height: 100vw;
+    height: 100vh;
     width: 100vw;
     background-color: black;
 }
@@ -19,7 +19,7 @@ body{
 }
 
 main{
-    height: 100vw;
+    height: 100vh;
     position: relative;
     }
 #telefone{
