--- a/estilos/style.css
+++ b/estilos/style.css
@@ -16,6 +16,8 @@ body{
     background: url(../imagens/fundo-madeira.jpg)no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
+    width: 98vw
+    heigth: 98vh
 }
 
 main{
